--- a/srl_il/cfg/il_gg_act_resnet.yaml
+++ b/srl_il/cfg/il_gg_act_resnet.yaml
@@ -2,7 +2,7 @@ defaults:
   # presets do not directly configs the pipeline or the algothm. However it provides necessary information to resolve this config
   - _self_
 
-batch_size: 100 # TODO: What do we want here
+batch_size: 100 # Default: 100
 seed: 43
 debugrun: false
 wandb_cfg:
@@ -18,7 +18,7 @@ pipeline:
 dataset_cfg:
   data:
     _target_: srl_il.dataset.gg_dataset.gg_train_val_test
-    data_directory: /home/ubuntu/workspace/il_data # TODO: Adjust to the correct data directory
+    data_directory: /home/ubuntu/workspace/il_data/compr-all-sessions  # Clean data
     test_fraction: 0.1
     val_fraction: 0.1
     window_size_train: 20
@@ -29,7 +29,8 @@ dataset_cfg:
               ['qpos_franka', 'qpos_franka', 0, 1],  
               ['qpos_hand', 'qpos_hand', 0, 1],  
               ['oakd_front_view_images', 'oakd_front_view/color', 0, 1],  
-              ['oakd_side_view_images', 'oakd_side_view/color', 0, 1],  
+              ['oakd_side_view_images', 'oakd_side_view/color', 0, 1],
+              ['oakd_wrist_view_images', 'oakd_wrist_view/color', 0, 1]  
               # TODO: Add the wrist camera
               # TODO: Add sensor values
             ] 
@@ -65,7 +66,7 @@ algo_cfg:
     encoder_is_causal: false
     decoder_is_causal: true
     encoder_group_keys: ['qpos']
-    decoder_group_keys: ['qpos', 'oakd_front_view_images', 'oakd_side_view_images']
+    decoder_group_keys: ['qpos', 'oakd_front_view_images', 'oakd_side_view_images', 'oakd_wrist_view_images']
     encoder_cfg:
       d_model: 256
       nhead: 8
@@ -86,7 +87,7 @@ algo_cfg:
     optimizer_cfg:
       act_encoder:
         optm_cls: torch.optim.Adam
-        lr: 0.0001
+        lr: 0.0001 # default 0.0001 increase with batch size
       act_decoder:
         optm_cls: torch.optim.Adam
         lr: 0.0001
@@ -127,6 +128,15 @@ algo_cfg:
           pretrained: true
         posemb_cfg:
           type: none
+      oakd_wrist_view_images:
+        datakeys: ['oakd_wrist_view_images']
+        encoder_cfg:
+          type:  crop_resnet18
+          resize_shape: [224, 224]
+          crop_shape: null
+          pretrained: true
+        posemb_cfg:
+          type: none
     group_emb_cfg:
       type: "whole_seq_sine" # none, whole_seq_sine, each_group_learned, whole_seq_learned
 
@@ -142,6 +152,7 @@ algo_cfg:
       - ['qpos_hand', 1]
       - ['oakd_front_view_images', 2]
       - ['oakd_side_view_images', 2]
+      - ['oakd_wrist_view_images', 2]
       # TODO: Add sensor data or wrist camera here?
 
 
@@ -177,7 +188,7 @@ training_cfg:
     enabled: false
 
   visualization:
-    enabled: true
+    enabled: false
     num_samples: 5
     every_n_epoch: 10
 
@@ -206,6 +217,11 @@ normalizer_cfg:
     type: hardcode
     mean: [[[0.485]], [[0.456]], [[0.406]]]
     std: [[[0.229]], [[0.224]], [[0.225]]]
+  oakd_wrist_view_images:
+    type: hardcode
+    mean: [[[0.485]], [[0.456]], [[0.406]]]
+    std: [[[0.229]], [[0.224]], [[0.225]]]
+
 
 data_augmentation_cfg: # data augmetation is only used for the data loaded from dataset, no simulation data augmentation
   data_augments:
@@ -223,6 +239,7 @@ projection_visualizer_cfg:
   img_views: # (img_name, img_key, extrinsics_key, intrinsics_key)
   - ["front", "oakd_front_view_images", "oakd_front_view/extrinsics", "oakd_front_view/intrinsics"]
   - ["side", "oakd_side_view_images", "oakd_side_view/extrinsics", "oakd_side_view/intrinsics"]
+  # - ["wrist", "oakd_wrist_view_images"]
  
 # set the directory where the output files get saved
 # TODO: Give this parameters
